--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=8082
 
-MONGODB_URL=mongodb://127.0.0.1:27017/xflix
+MONGODB_URL=mongodb+srv://pritam14:pritam14@xflix.7nlekm0.mongodb.net/?retryWrites=true&w=majority&appName=xflix
 JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=240
 JWT_REFRESH_EXPIRATION_DAYS=30
