--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=8082
 
-MONGODB_URL=mongodb+srv://pritam14:pritam14@xflix.7nlekm0.mongodb.net/?retryWrites=true&w=majority&appName=xflix
+MONGODB_URL=mongodb+srv://mondalrumki02:pritam@123@flix.mvn6bsw.mongodb.net/?retryWrites=true&w=majority&appName=flix
 JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=240
 JWT_REFRESH_EXPIRATION_DAYS=30
