--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,14 @@
   "dependencies": {
     "core-js": "^3.0.0",
     "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.19.2",
     "http-status": "^1.4.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "joi": "^17.3.0",
     "mongodb": "3.7",
     "mongoose": "^5.10.9",
