--- a/frontend/xflix/package.json
+++ b/frontend/xflix/package.json
@@ -19,7 +19,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^4.2.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
